testsuite/gnatprove/tests/O429-045__tasking_restrictions/test.out
analysis of good.gpr
--------------------------
Phase 1 of 2: generation of data representation information ...
Phase 2 of 2: fast partial checking of SPARK legality rules ...
[Ada Global_Gen]  p.adb
completed 1 out of 2 (50%)...
[Ada Analysis]    p.adb
completed 2 out of 2 (100%)...

analysis of bad_profile.gpr
--------------------------
Phase 1 of 2: generation of data representation information ...
Phase 2 of 2: fast partial checking of SPARK legality rules ...
[Ada Global_Gen]  p.adb
completed 1 out of 2 (50%)...
[Ada Analysis]    p.adb
 error: tasking in SPARK requires Ravenscar profile (SPARK RM 9(2))
--> p.ads:3:09
    3 |       task T;
      |            ^
      + violation of pragma SPARK_Mode at bad_profile.adc:1
      --> bad_profile.adc:1:01
    1 |    pragma SPARK_Mode (On);
      |    ^
bad_profile.gpr: error: [Ada Analysis] p.adb (bad_profile.gpr) failed with status 5
completed 2 out of 2 (100%)...
gnatprove: error during fast partial checking of SPARK legality rules

analysis of bad_pep.gpr
--------------------------
Phase 1 of 2: generation of data representation information ...
Phase 2 of 2: fast partial checking of SPARK legality rules ...
[Ada Global_Gen]  p.adb
completed 1 out of 2 (50%)...
[Ada Analysis]    p.adb
 error: tasking in SPARK requires sequential elaboration (SPARK RM 9(2))
--> p.ads:3:09
    3 |       task T;
      |            ^
      + violation of pragma SPARK_Mode at bad_pep.adc:1
      --> bad_pep.adc:1:01
    1 |    pragma SPARK_Mode (On);
      |    ^
bad_pep.gpr: error: [Ada Analysis] p.adb (bad_pep.gpr) failed with status 5
completed 2 out of 2 (100%)...
gnatprove: error during fast partial checking of SPARK legality rules
